# loki

./: .codecov.yml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .tarpaulin.toml  Cargo.toml  Readme.md  Readme.rst  build_dockers.sh  clippy.toml  grcov.yml
.cargo/: config
.github/: dependabot.yml
.github/workflows/: artemis.yml  audit.yml  benchmarks.yml  clippy.yml  coverage.yml  dockers.yml  sonarcloud.yml  workflow.yml
cli/: Cargo.toml  Readme.md  empty_loads.csv
cli/src/: lib.rs  main.rs  random.rs  stop_areas.rs
cli/tests/: test_one_line.rs
cli/tests/one_line/: commercial_modes.txt  stops.txt
client/: Cargo.toml
client/src/: main.rs
data/corse/: stoptimes_loads.csv
data/idfm/: stoptimes_occupancy.csv
data/transilien/: stoptimes_loads.csv  stoptimes_occupancy.csv
diagram/: pt_request_handling.txt  realtime_handling.txt
docker/: Readme.md  bina.sh  bina_artemis.sh  bina_artemis_dockerfile  bina_dockerfile  compose.yml  jormun_dockerfile  kraken.ini  kraken_dockerfile  kubernetes-volume.yml  launch.sh  laxatips_dockerfile  loki_aws_dockerfile  loki_dockerfile  loki_opentelemetry_dockerfile  loki_opentelemetry_startup.sh  opentelemetry_exporter_config.yaml  pca_hove.crt  run.sh
launch/: Cargo.toml  Readme.md
launch/benches/: routing_bench.rs
launch/src/: config.rs  datetime.rs  filter_utility.rs  filters.rs  lib.rs  logger.rs  read.rs  realtime.rs  solver.rs  stop_areas.rs  timer.rs
launch/src/config/: comparator_type.rs  criteria_implem.rs  data_implem.rs  input_data_type.rs  launch_params.rs  request_params.rs
launch/tests/: loads_test.rs  local_zone_test.rs  model_builder.rs  model_builder_test.rs  next_schedule_test.rs  occupancy_test.rs  pickup_dropoff_test.rs  places_nearby_tests.rs  routing_with_filters_test.rs  simple_routing_test.rs  stay_in_test.rs  timezone_test.rs  update_data_test.rs  utils.rs
launch/tests/fixtures/loads_test/: loads.csv
launch/tests/fixtures/occupancy_test/: occupancy.csv
launch/tests/utils/: disruption_builder.rs  mod.rs  model_builder.rs
random/: Cargo.toml  Readme.md  benchmarks.md  config.json  config.toml
random/src/: main.rs
server/: Cargo.toml  Readme.md  build.rs
server/a_small_ntfs/: datasets.txt  routes.txt
server/config_files/: data_in_local_folder.toml  data_in_s3.toml  typo_in_config.toml
server/src/: compute_worker.rs  config.rs  data_downloader.rs  data_worker.rs  handle_chaos_message.rs  handle_kirin_message.rs  http_worker.rs  kirin_model.rs  lib.rs  load_balancer.rs  main.rs  master_worker.rs  metrics.rs  navitia_proto.rs  networker.rs  program.rs  proto_kirin_message.rs  rabbitmq_worker.rs  realtime.rs  response.rs  server_config.rs  status_worker.rs  worker.rs  zmq_worker.rs
server/src/chaos/: mod.rs  model_v2.rs  models.rs  query.sql  schema.rs  sql_types.rs
server/src/server_config/: chaos_params.rs  data_source_params.rs  http_params.rs  rabbitmq_params.rs
server/tests/: main_test.rs  reload_test.rs
server/tests/a_small_ntfs/: calendar.txt  commercial_modes.txt  companies.txt  datasets.txt  feed_infos.txt  lines.txt  loads.csv  pathways.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt  trips_renamed.txt
server/tests/config_files/: data_in_local_folder.toml  data_in_s3.toml  typo_in_config.toml
server/tests/postgres-docker/: init.sql
server/tests/subtests/: chaos_delete_vj_test.rs  chaos_test.rs  http_test.rs  journeys_test.rs  kirin_delete_vj_test.rs  mod.rs  places_nearby_test.rs  realtime_test.rs  reload_test.rs  schedule_test.rs  status_metadata_test.rs
src/: chain_decomposition.rs  config.rs  crowding_data.rs  engine.rs  filters.rs  geometry.rs  journeys_tree.rs  launch_utils.rs  laxatips_daily_data.rs  laxatips_data.rs  lib.rs  loads_data.rs  main.rs  mc_data.rs  model.rs  models.rs  multicriteria_raptor.rs  occupancy_data.rs  pareto_front.rs  places_nearby.rs  pr_simard.txt  public_transit.rs  realtime.rs  request.rs  response.rs  robustness.rs  schedule.rs  solver.rs  time.rs  timetables.rs  todo.txt  traits.rs  transit_data.rs  transit_data_filtered.rs  transit_data_realtime.rs
src/calendar_data/: days_patterns.rs  iters.rs  queries.rs  timetables.rs  transit_data.rs
src/config/: comparator_type.rs  criteria_implem.rs  data_implem.rs  input_data_type.rs  launch_params.rs  request_params.rs
src/daily_data/: init.rs  queries.rs
src/data/: chain_decomposition.rs  data.rs  init.rs  mc_data_old.rs  mod.rs  ordered_timetable.rs  queries.rs
src/engine/: engine_interface.rs  journeys_tree.rs  mod.rs  multicriteria_raptor.rs  pareto_front.rs  public_transit.rs
src/laxatips_daily_data/: init.rs  iters.rs  queries.rs  time.rs  transit_data.rs
src/laxatips_data/: calendar.rs  days_patterns.rs  forward_queries.rs  init.rs  iters.rs  ordered_timetable.rs  queries.rs  time.rs  transit_data.rs
src/loads_data/: empty_loads.rs  real_loads.rs
src/model/: disruption.rs  infos.rs  real_time.rs  rt_model.rs  rt_type.rs
src/modelbuilder/: mod.rs
src/models/: apply_disruption.rs  base_model.rs  cancel_disruption.rs  model_refs.rs  real_time_disruption.rs  real_time_model.rs
src/occupancy_data/: empty_occupancy.rs  real_occupancy.rs
src/places_nearby/: mod.rs  utility.rs
src/realtime/: disruption.rs  real_time_model.rs  rt_model.rs
src/request/: arrive_before.rs  basic_criteria.rs  depart_after.rs  depart_after_filtered.rs  generic_request.rs  loads_criteria.rs  loads_depart_after.rs  response.rs  response2.rs
src/time/: calendar.rs  days_map.rs  days_patterns.rs  timezones_patterns.rs
src/timetables/: calendar.rs  daily.rs  day_to_timetable.rs  generic_timetables.rs  iters.rs  loads_daily.rs  loads_periodic.rs  periodic.rs  periodic_split_vj_by_tz.rs  timetable_data.rs  timetable_iters.rs  utc_timetables.rs  (+1 more)
stop_areas/: Cargo.toml  Readme.md  config.toml
stop_areas/src/: lib.rs  main.rs
stop_areas/tests/: test_one_line.rs
stop_areas/tests/one_line/: contributors.txt  datasets.txt  lines.txt  loads.csv  networks.txt  physical_modes.txt  routes.txt  stops.txt  transfers.txt  trips.txt
(+108 files in other folders)
