[package]
name = "loki"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"server",
	"launch",
	"random",
	"stop_areas",
]

[features]
default = [] #["vehicle_loads"]
vehicle_loads = []

[dependencies]
transit_model = "0.41"
typed_index_collection = { version = "2", features = ["expose-inner"] }
chrono = "0.4"
chrono-tz = "0.5"
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
static_assertions = "1.1.0"
csv = "1"
serde = "1.0"
rustc-hash = "1"
relational_types = "2.0.0"


[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
panic = 'unwind'
