[package]
name = "loki"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"server",
	"launch",
	"random",
	"stop_areas",
]

[features]
default = [] #["vehicle_loads"]
vehicle_loads = []
demo_occupancy = ["vehicle_loads"]

[dependencies]
transit_model = "0.53"
typed_index_collection = { version = "2", features = ["expose-inner"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
chrono-tz = "0.7"
tracing = { version = "0.1"}
static_assertions = "1.1.0"
csv = "1"
serde = "1.0"
regex = "1"
lazy_static = "1"

[profile.dev]
opt-level = 1
codegen-units = 16

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
panic = 'unwind'
