[package]
name = "cli"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laxatips = { path = "../"}
structopt = "0.3"
chrono = "0.4"
failure = "0.1"
slog = "2.5"
slog-term = "2.4"
slog-scope = "4.1"
slog-stdlog = "4.0"
slog-async = "2.3"
slog-envlogger = "2.1"
rand = "0.7"
rand_chacha = "0.2.2"
