[package]
name = "launch"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loki = { path = "../"}
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]

rstest = "0.12"

[features]
# enable the vehicle_loads feature on the loki lib
vehicle_loads = ["loki/vehicle_loads"]
