[package]
name = "loki_launch"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loki = { path = "../"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thousands = "0.2"

[dev-dependencies]
rstest = "0.16"

[features]
# enable the vehicle_occupancy feature on the loki lib
vehicle_occupancy = ["loki/vehicle_occupancy"]
demo_occupancy = ["loki/demo_occupancy", "vehicle_occupancy"]
