[package]
name = "loki_random"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loki_launch = { path = "../launch"}
structopt = "0.3"
serde = "1.0"
toml = "0.7"
anyhow = "1"
rand = "0.8"
rand_chacha = "0.3"
hdrhistogram = "7.5.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
