[package]
name = "loki_server"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for navitia_proto
prost = "0.10"

# for chaos_proto which uses protobuf v2 extensions features, which are not supported by prost
# cf https://github.com/tokio-rs/prost/issues/100
protobuf = "2"

# Postgres sql connection
diesel = { version = "1.4", features = ["64-column-tables", "postgres", "chrono", "uuid", "uuidv07"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
uuid = "0.8"

# Zmq lib with async interface
tmq = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt", "signal"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# RabbitMq lib
# !! We use the integration with tokio through tokio-amqp
# We should use version of lapin that tokio-amqp uses
lapin = "2.0"
tokio-amqp = "2"

# Object Storage library (S3, Minio, ..)
rust-s3 = "0.31"

launch = { path = "../launch"}
structopt = "0.3"
anyhow = "1"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
hostname = "0.3"
num-traits = "0.2.14"

[dev-dependencies]
shiplift = "0.7" # docker API
tempfile = "3"

[build-dependencies]
prost-build = "0.10"
protobuf-codegen-pure = "2"
