[package]
name = "loki_server"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for navitia_proto
prost = "0.11"

# for chaos_proto which uses protobuf v2 extensions features, which are not supported by prost
# cf https://github.com/tokio-rs/prost/issues/100
protobuf = "3"

# Postgres sql connection
diesel = { version = "1.4", features = ["64-column-tables", "postgres", "chrono", "uuid", "uuidv07"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
uuid = { version = "0.8", features = ["v4"] }

# Zmq lib with async interface
tmq = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt", "signal"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# RabbitMQ
lapin = "2.0"

# Object Storage library (S3, Minio, ..)
rust-s3 = "0.32"

loki_launch = { path = "../launch"}

anyhow = "1"
thiserror = "1"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
hostname = "0.3"

num-traits = "0.2.14"

tracing = { version = "0.1", features = ["release_max_level_info"]}

hyper = {version = "0.14", features = ["server", "stream"] }


[dev-dependencies]
shiplift = "0.7" # docker API
tempfile = "3"

[build-dependencies]
prost-build = "0.11"
protobuf-codegen = "3"
