[package]
name = "loki_stop_areas"
version = "0.1.0"
authors = ["Pascal Benchimol <pascal.benchimol@kisio.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
launch = { path = "../launch"}
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
anyhow = "1"
# log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

[features]
# enable the vehicle_loads feature on the loki lib
vehicle_loads = ["launch/vehicle_loads"]
